{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 14,
  "lineage": "2718c330-49df-75d8-a11c-79aec3fb860d",
  "resources": [
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_eip",
      "name": "aeis_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0ed44d8c705125654",
            "arn": "arn:aws:ec2:us-east-1:891377375582:elastic-ip/eipalloc-0ed44d8c705125654",
            "associate_with_private_ip": "10.0.1.26",
            "association_id": "eipassoc-025fa9bfd804b1221",
            "domain": "vpc",
            "id": "eipalloc-0ed44d8c705125654",
            "instance": "i-0249da23043b9f3e5",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0d3a439f6ba60b6ea",
            "private_dns": "ip-10-0-1-26.ec2.internal",
            "private_ip": "10.0.1.26",
            "public_dns": "ec2-3-210-163-207.compute-1.amazonaws.com",
            "public_ip": "3.210.163.207",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "aeis elastic ip"
            },
            "tags_all": {
              "Name": "aeis elastic ip"
            },
            "vpc": true
          },
          "dependencies": [
            "module.ec2_instances.aws_instance.ubuntu-aeis-instance",
            "module.ec2_instances.data.aws_ami.ubuntu_ami",
            "module.network_interface.aws_network_interface.aeis_network_interface",
            "module.security_groups.aws_security_group.web_server_sg",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instances",
      "mode": "managed",
      "type": "aws_instance",
      "name": "ubuntu-aeis-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c819f65440d5f1d1",
            "arn": "arn:aws:ec2:us-east-1:891377375582:instance/i-0249da23043b9f3e5",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1d",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0249da23043b9f3e5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-0d3a439f6ba60b6ea"
              }
            ],
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0d3a439f6ba60b6ea",
            "private_dns": "ip-10-0-1-26.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.26",
            "public_ip": "3.210.163.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-031073a9ec2e753c6",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af1ae7371dc71465",
            "tags": {
              "Name": "Ubuntu AEIS instance"
            },
            "tags_all": {
              "Name": "Ubuntu AEIS instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0ba454f4500d6d9ed"
            ]
          },
          "dependencies": [
            "module.ec2_instances.data.aws_ami.ubuntu_ami",
            "module.network_interface.aws_network_interface.aeis_network_interface",
            "module.security_groups.aws_security_group.web_server_sg",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network_interface",
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "aeis_network_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:network-interface/eni-0d3a439f6ba60b6ea",
            "attachment": [
              {
                "attachment_id": "eni-attach-0c722eec373b5ee77",
                "device_index": 0,
                "instance": "i-0249da23043b9f3e5"
              }
            ],
            "id": "eni-0d3a439f6ba60b6ea",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:98:8c:2c:f7:67",
            "owner_id": "891377375582",
            "private_ip": "10.0.1.26",
            "private_ip_list": [
              "10.0.1.26"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.26"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0ba454f4500d6d9ed"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0af1ae7371dc71465"
          },
          "dependencies": [
            "module.security_groups.aws_security_group.web_server_sg",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.security_groups",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_server_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:security-group/sg-0ba454f4500d6d9ed",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all trafic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba454f4500d6d9ed",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP trafic from internet",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTPS trafic from internet",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "terraform-20240629153231603100000001",
            "name_prefix": "terraform-",
            "owner_id": "891377375582",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aeis security group"
            },
            "tags_all": {
              "Name": "aeis security group"
            },
            "timeouts": null,
            "vpc_id": "vpc-03c2aa2a55614b3e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "fis_public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:internet-gateway/igw-03a6e4401f3386b90",
            "id": "igw-03a6e4401f3386b90",
            "owner_id": "891377375582",
            "vpc_id": "vpc-03c2aa2a55614b3e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "fis_public_subnet_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:route-table/rtb-007d85ad020f40fa1",
            "id": "rtb-007d85ad020f40fa1",
            "owner_id": "891377375582",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a6e4401f3386b90",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03a6e4401f3386b90",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-03c2aa2a55614b3e6"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.subnet.aws_internet_gateway.fis_public_internet_gateway",
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "fis_public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0381f5bf1a049b126",
            "route_table_id": "rtb-007d85ad020f40fa1",
            "subnet_id": "subnet-0af1ae7371dc71465"
          },
          "dependencies": [
            "module.subnet.aws_internet_gateway.fis_public_internet_gateway",
            "module.subnet.aws_route_table.fis_public_subnet_route_table",
            "module.subnet.aws_subnet.public_subnet",
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:subnet/subnet-0dd5ef38f098f8ad2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd5ef38f098f8ad2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377375582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03c2aa2a55614b3e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:subnet/subnet-0af1ae7371dc71465",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0af1ae7371dc71465",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377375582",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-03c2aa2a55614b3e6"
          },
          "dependencies": [
            "module.vpc.aws_vpc.fis_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "fis_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377375582:vpc/vpc-03c2aa2a55614b3e6",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01786b9a5f24b83a9",
            "default_route_table_id": "rtb-0e21f26d06d0994cc",
            "default_security_group_id": "sg-0335cd6ff589e6348",
            "dhcp_options_id": "dopt-084eae0c38c0da610",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03c2aa2a55614b3e6",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e21f26d06d0994cc",
            "owner_id": "891377375582",
            "tags": {
              "Name": "vpc AEIS instance"
            },
            "tags_all": {
              "Name": "vpc AEIS instance"
            }
          }
        }
      ]
    }
  ]
}